# chatgpt-utils

./: README.md  setup.cfg  setup.py
src/chatgpt_utils/: __init__.py  classification.py
src/chatgpt_utils/embeddings/: utils.py
src/chatgpt_utils/parse/: __init__.py  delimiter_parser.py  json_parser.py
src/chatgpt_utils/prompt/: PromptDesigner.py  __init__.py  utils.py
src/ching_chatgpt_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mypackage.egg-info/: SOURCES.txt
src/openai_utils/: __init__.py
src/openai_utils/chatcompletion/: __init__.py  base.py  openai_chatgpt.py
src/openai_utils/config/: __init__.py  huggingface_config.py  openai_config.py
src/openai_utils/embeddings/: __init__.py  embeddings.py  huggingface_embeddings.py  openai_embeddings.py  utils.py
src/openai_utils/parse/: __init__.py
src/openai_utils/prompt/: __init__.py
