[metadata]
name = ching_chatgpt_utils
version = 0.0.5
author = Ching Fhen
author_email = dsai.chingfhen@gmail.com
description = This package has some useful functions for ChatGPT workflows - Writing Prompts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    regex

[options.packages.find]
where = src
